k8s/ingress/auth-external-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-external
  namespace: default
  annotations:
    konghq.com/plugins: jwt-auth,external-acl
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: auth-external-service
            port:
              number: 80
