k8s/ingress/product-internal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-internal
  namespace: default
  annotations:
    konghq.com/plugins: jwt-auth,internal-acl
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /product/intl
        pathType: Prefix
        backend:
          service:
            name: product-internal-service
            port:
              number: 80
